# Protocol-Finalle

./: .gitignore  pyproject.toml
src/: main.py
src/core/: encryption.py  identity.py  peer_manager.py
src/network/: p2p_client.py  quic_server.py
src/security/: ram_guard.py  utils.py
