[project]
name = "chat-quantico"
version = "0.1.0"
description = "Comunicacao Tática Pós-Quântica"
authors = [
    {name = "DouglasScarello",email = "dog.douglas10009@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pqcrypto (>=0.4.0,<0.5.0)",
    "aioquic (>=1.3.0,<2.0.0)",
    "netifaces (>=0.11.0,<0.12.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "cryptography (>=46.0.5,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
